--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "grunt-contrib-qunit": "~1.2.0",
     "grunt-contrib-connect": "~1.0.2",
     "grunt-contrib-uglify": "~0.2.4",
-    "grunt-contrib-concat": "~1.0.1"
+    "grunt-contrib-concat": "~1.0.1",
+    "ink-docstrap": "~1.3.0",
+    "grunt-jsdoc": "~2.1.0"
   }
 }
